# sbert-service

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: cicd.yml  test-and-publish.yml
ebs/bundle/: Dockerrun.aws.json
ebs/bundle/.ebextensions/: logs.config
infrastructure/: .gitignore
infrastructure/aws/terraform/: README.md  global.hcl  terragrunt.hcl
infrastructure/aws/terraform/mentorpal/dev/: env.hcl
infrastructure/aws/terraform/mentorpal/dev/us-east-1/sbert-service/: .terraform.lock.hcl  terragrunt.hcl
infrastructure/aws/terraform/mentorpal/prod/: env.hcl
infrastructure/aws/terraform/mentorpal/prod/us-east-1/sbert-service/: .terraform.lock.hcl  secret.hcl.template  terragrunt.hcl
infrastructure/aws/terraform/mentorpal/qa/: account.hcl.template  env.hcl
infrastructure/aws/terraform/mentorpal/qa/us-east-1/sbert-service/: secret.hcl.template  terragrunt.hcl
infrastructure/aws/terraform/mentorpal/shared/: env.hcl
infrastructure/aws/terraform/mentorpal/shared/us-east-1/ecr/: terragrunt.hcl
infrastructure/aws/terraform/modules/beanstalk/: README.md  main.tf  variables.tf  versions.tf
infrastructure/aws/terraform/modules/ecr/: ecr.tf  outputs.tf  variables.tf
server/: gunicorn_conf.py  manage.py  pyproject.toml
server/api/: __init__.py
server/api/blueprints/: __init__.py  auth_decorator.py  encode.py  health.py  paraphrase.py  word2vec.py
server/transformer/: embeddings.py  encode.py  utils.py  word2vec_transformer.py
shared/: sentence_transformer_download.py  transformer_download.sh  utils.py  word2vec_download.py  word2vec_slim_download.py
tests/: conftest.py  test_api_encode.py  test_api_w2v.py  test_cors.py  test_ping.py  test_transformer_encode.py
tools/: clint_transcripts.json  encode-k6.js  poetry_ensure_installed.sh  questions.json
