[tool.poetry]
name = "sbert-service"
version = "0.1.0"
description = "SBert as a service"
authors = ["Milan Simonovic <mbsimonovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
licenseheaders = {git = "https://github.com/kycarr/licenseheaders.git"}
joblib = "^1.1.0"
sentence-transformers = "^2.2.2"
sentry-sdk = {extras = ["flask"], version = "^1.14.0"}
gensim = "^4.3.0"
torch = "1.13.1"
PyJWT = "2.6.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
pep8-naming = "^0.13.3"
pytest = "^7.2.1"
pytest-flask = "^1.2.0"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
