[tool.poetry]
name = "server"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.8.12"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
gunicorn = "^20.1.0"
redis = "^3.5.3"
Werkzeug = "^2.0.1"
responses = "^0.13.3"
python-dotenv = "^0.19.0"
boto3 = "^1.18.31"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pip-upgrader = "*"
poethepoet = "^0.10.0"
pytest = "^6.2.4"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.1"
pytest-only = "^1.2.2"
pytest-flask = "^1.2.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
